--- a/BTCMarkets.ETHTxSearch.Core/BTCMarkets.ETHTxSearch.Core.csproj
+++ b/BTCMarkets.ETHTxSearch.Core/BTCMarkets.ETHTxSearch.Core.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\" />
+      <Folder Include="Api\" />
+      <Folder Include="Models\" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
 </Project>
