--- a/BTCMarkets.ETHTxSearch.Infrastructure/BTCMarkets.ETHTxSearch.Infrastructure.csproj
+++ b/BTCMarkets.ETHTxSearch.Infrastructure/BTCMarkets.ETHTxSearch.Infrastructure.csproj
@@ -4,4 +4,15 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+      <Folder Include="Api\" />
+      <Folder Include="Api\Requests\" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\BTCMarkets.ETHTxSearch.Core\BTCMarkets.ETHTxSearch.Core.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+    </ItemGroup>
 </Project>
