--- a/BTCMarkets.ETHTxSearch.UnitTests/BTCMarkets.ETHTxSearch.UnitTests.csproj
+++ b/BTCMarkets.ETHTxSearch.UnitTests/BTCMarkets.ETHTxSearch.UnitTests.csproj
@@ -11,6 +11,12 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="Moq" Version="4.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BTCMarkets.ETHTxSearch.Core\BTCMarkets.ETHTxSearch.Core.csproj" />
+    <ProjectReference Include="..\BTCMarkets.ETHTxSearch.Infrastructure\BTCMarkets.ETHTxSearch.Infrastructure.csproj" />
+    <ProjectReference Include="..\BTCMarkets.ETHTxSearch.Web\BTCMarkets.ETHTxSearch.Web.csproj" />
+  </ItemGroup>
 </Project>
