--- a/BTCMarkets.ETHTxSearch.Web/ClientApp/package.json
+++ b/BTCMarkets.ETHTxSearch.Web/ClientApp/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
+    "formik": "^2.1.3",
     "history": "4.10.1",
     "jquery": "^3.4.1",
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-icons": "^3.8.0",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
+    "redux-form": "^8.2.6",
     "redux-thunk": "2.3.0",
     "svgo": "1.3.0"
   },
