Added Configuration to config file and load settings from  it

--- a/BTCMarkets.ETHTxSearch.Web/BTCMarkets.ETHTxSearch.Web.csproj
+++ b/BTCMarkets.ETHTxSearch.Web/BTCMarkets.ETHTxSearch.Web.csproj
@@ -44,6 +44,9 @@
     <Content Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Condition="'$(ExcludeConfigFilesFromBuildOutput)'=='true'" Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\store\TransactionData.ts" />
