--- a/BTCMarkets.ETHTxSearch.Web/appsettings.json
+++ b/BTCMarkets.ETHTxSearch.Web/appsettings.json
@@ -1,11 +1,15 @@
 {
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ApiOptions": {
+    "ApiEnvironment": 1,
+    "Version": "V3",
+    "ProjectId": "22b2ebe2940745b3835907b30e8257a4"
+  },
   "AllowedHosts": "*"
-}
+}  
